<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>4.0.4</version>
	</parent>

	<groupId>no.nav.saf</groupId>
	<artifactId>saf</artifactId>
	<packaging>pom</packaging>
	<version>1-SNAPSHOT</version>

	<modules>
		<module>app</module>
		<module>core</module>
		<module>dokumentoversikt</module>
		<module>hentdokument</module>
		<module>journalpost</module>
		<module>tilknyttedejournalposter</module>
		<module>sak</module>
	</modules>

	<properties>
		<java.version>25</java.version>

		<graphql-java.version>25.0</graphql-java.version>
		<resilience4j.version>2.4.0</resilience4j.version>
		<token-support.version>6.0.4</token-support.version>
		<springdoc-openapi-starter-webmvc-ui.version>3.0.2</springdoc-openapi-starter-webmvc-ui.version>
		<logstash-logback-encoder.version>9.0</logstash-logback-encoder.version>
		<audit-log.version>3.2025.06.23_14.50-3af3985d8555</audit-log.version>
		<microsoft-graph.version>6.62.0</microsoft-graph.version>
		<azure-identity.version>1.18.2</azure-identity.version>
		<context-propagation.version>1.2.1</context-propagation.version>
		<bcprov-jdk18on.version>1.83</bcprov-jdk18on.version>
		<safselvbetjening-innsyn-api.version>2026.02.06-13.23-57e762f</safselvbetjening-innsyn-api.version>
		<mock-oauth2-server.version>2.3.0</mock-oauth2-server.version>

		<!-- Test -->
		<wiremock-spring-boot.version>4.2.1</wiremock-spring-boot.version>
		<embedded-redis.version>1.4.3</embedded-redis.version>

		<!-- Plugins -->
		<maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>core</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>dokumentoversikt</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>journalpost</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>tilknyttedejournalposter</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>hentdokument</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.saf</groupId>
				<artifactId>sak</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>no.nav.safselvbetjening</groupId>
				<artifactId>innsyn-tilgang-api</artifactId>
				<version>${safselvbetjening-innsyn-api.version}</version>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-bom</artifactId>
				<version>${resilience4j.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.github.resilience4j</groupId>
				<artifactId>resilience4j-spring-boot4</artifactId>
				<version>${resilience4j.version}</version>
			</dependency>
			<dependency>
				<groupId>com.graphql-java</groupId>
				<artifactId>graphql-java</artifactId>
				<version>${graphql-java.version}</version>
			</dependency>
			<dependency>
				<groupId>net.logstash.logback</groupId>
				<artifactId>logstash-logback-encoder</artifactId>
				<version>${logstash-logback-encoder.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
				<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.common</groupId>
				<artifactId>audit-log</artifactId>
				<version>${audit-log.version}</version>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring</artifactId>
				<version>${token-support.version}</version>
			</dependency>
			<dependency>
				<groupId>com.microsoft.graph</groupId>
				<artifactId>microsoft-graph</artifactId>
				<version>${microsoft-graph.version}</version>
			</dependency>
			<dependency>
				<groupId>com.azure</groupId>
				<artifactId>azure-identity</artifactId>
				<version>${azure-identity.version}</version>
			</dependency>
			<dependency>
				<groupId>io.micrometer</groupId>
				<artifactId>context-propagation</artifactId>
				<version>${context-propagation.version}</version>
			</dependency>
			<!-- overrider transitive avhengigheter -->
			<dependency>
				<groupId>org.bouncycastle</groupId>
				<artifactId>bcprov-jdk18on</artifactId>
				<version>${bcprov-jdk18on.version}</version>
			</dependency>

			<!-- test -->
			<dependency>
				<groupId>org.wiremock.integrations</groupId>
				<artifactId>wiremock-spring-boot</artifactId>
				<version>${wiremock-spring-boot.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>token-validation-spring-test</artifactId>
				<version>${token-support.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.github.codemonstur</groupId>
				<artifactId>embedded-redis</artifactId>
				<version>${embedded-redis.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>no.nav.security</groupId>
				<artifactId>mock-oauth2-server</artifactId>
				<version>${mock-oauth2-server.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>--enable-preview -Dio.netty.allocator.type=pooled</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-toolchains-plugin</artifactId>
				<version>${maven-toolchains-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>toolchain</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<toolchains>
						<jdk>
							<version>${java.version}</version>
							<vendor>openjdk</vendor>
						</jdk>
					</toolchains>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
							<version>${lombok.version}</version>
						</path>
					</annotationProcessorPaths>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
